[gd_scene load_steps=11 format=3 uid="uid://c2ygw8wrcnx8e"]

[ext_resource type="Script" path="res://summons/stone_golem/StoneGolem.gd" id="1_ikioa"]
[ext_resource type="Texture2D" uid="uid://o226io4mh6nb" path="res://summons/stone_golem/stone_golem.png" id="2_hqi8w"]
[ext_resource type="Texture2D" uid="uid://hs4wj4jqs0q8" path="res://stuff/select_icon.png" id="3_yjght"]
[ext_resource type="Texture2D" uid="uid://cu6up8x21ml1p" path="res://summons/grass_golem/sleepy_particle.png" id="4_km7xl"]

[sub_resource type="Animation" id="Animation_37i35"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_vepgd"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1.05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_qh3hv"]
resource_name = "sleepy"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.99, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.97, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2)
}

[sub_resource type="Animation" id="Animation_oj4dt"]
resource_name = "tired"
length = 1.5
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7, 1.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.97, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7, 1.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6l03"]
_data = {
"RESET": SubResource("Animation_37i35"),
"idle": SubResource("Animation_vepgd"),
"sleepy": SubResource("Animation_qh3hv"),
"tired": SubResource("Animation_oj4dt")
}

[sub_resource type="Gradient" id="Gradient_wt8vg"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="StoneGolem" type="Node2D"]
texture_filter = 1
script = ExtResource("1_ikioa")
strength = 4
weight = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hqi8w")
hframes = 5

[node name="SelectIcon" type="Sprite2D" parent="Sprite2D"]
z_index = 20
position = Vector2(0, -40)
texture = ExtResource("3_yjght")
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e6l03")
}

[node name="SleepyParticle" type="CPUParticles2D" parent="."]
position = Vector2(9, -11)
emitting = false
amount = 3
lifetime = 2.0
texture = ExtResource("4_km7xl")
direction = Vector2(1, -1)
spread = 12.0
gravity = Vector2(0, -5)
initial_velocity_min = 14.0
initial_velocity_max = 20.0
color_ramp = SubResource("Gradient_wt8vg")
